2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	- Return False from the button release callback so the treeview rows
	  could be expanded.
	- Pass the correct number of columns to gtk_tree_store_new().
	- Correct the treeview row searching code.

2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:

	Implement _get_parent_id().

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Make the tree store search function very generic and add recursive
	search option to it.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/media-server-proxy.c:
	* src/av-cp/media-server-proxy.h:

	Add getter for DIDL-Lite parser to media server proxy.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Implement media server proxy addition and search to/from the
	treemodel.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* data/gupnp-av-cp.glade:
	* src/av-cp/av-cp-playlisttreeview.c:

	Playlist should be a tree rather than a list.

2007-10-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/media-server-proxy.c:

	Use g_error_free instead of g_free on GError objects.

2007-10-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Basic implementation of DIDL-Lite object representation.

	* src/av-cp/didl-lite-parser.c:
	* src/av-cp/didl-lite-parser.h:

	Basic implementation of DIDL-Lite document parser.

	* src/av-cp/media-server-proxy.c:
	* src/av-cp/media-server-proxy.h:

	- Implement browsing.
	- Remove commented-out code.

	* src/av-cp/xml-util.c:
	* src/av-cp/xml-util.h:

	Misc utilities for inspecting xmlNodes. Borrowed from gupnp package,
	trimmed and modified accordingly.

	* src/av-cp/Makefile.am:

	Add newl-added modules to build.

	* src/av-cp/av-cp-playlisttreeview.c:
	* src/av-cp/av-cp-playlisttreeview.h:
	* src/av-cp/av-cp.c:
