@@ -6,6 +6,7 @@
 	  could be expanded.
 	- Pass the correct number of columns to gtk_tree_store_new().
 	- Correct the treeview row searching code.
+	- Implement addition of DIDL objects to treeview.
 
 2007-10-19  Zeeshan Ali  <zeenix@gstreamer.net>
 
